Fixed sending spicy pics